Section my-story terminada

--- a/scss/layout/index.scss
+++ b/scss/layout/index.scss
@@ -11,8 +11,6 @@ nav{
     height: 6.25rem;
     width: 100%;
     background-color: white;
+    margin-right: 12.25rem;
 }
 
-header{
-    border: solid 4px green;
-}
