--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,7 @@ nav {
   height: 6.25rem;
   width: 100%;
   background-color: white;
-}
-
-header {
-  border: solid 4px green;
+  margin-right: 12.25rem;
 }
 
 /* HEADER */
@@ -82,6 +79,7 @@ nav .logo img {
   align-items: center;
   gap: 1.4rem;
   padding-right: 5rem;
+  margin-right: 5rem;
 }
 .navbar li {
   list-style: none;
@@ -246,6 +244,7 @@ nav .logo img {
 }
 .my-story .my {
   display: flex;
+  width: 45%;
 }
 .my-story .my img {
   width: 180px;
@@ -256,7 +255,7 @@ nav .logo img {
 .my-story .my h2 {
   font-size: 44px;
   font-weight: 600;
-  text-align: center;
+  width: 100%;
   font-family: "Poppins", sans-serif;
   color: white;
   margin-top: 3rem;
@@ -264,14 +263,23 @@ nav .logo img {
   text-align: start;
 }
 .my-story p {
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-style: bold;
+  font-weight: 500;
+  letter-spacing: 1px;
+  line-height: 1.9;
+  font-family: sans-serif;
   color: white;
+  margin-top: 6rem;
+}
+.my-story .line {
+  border-top: solid white 1px;
+  width: 18%;
+  margin-bottom: 2rem;
 }
 .my-story a {
-  font-size: 13px;
-  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-family: sans-serif;
   font-weight: 400;
   color: white;
   text-decoration: none;
