--- a/scss/layout/_header.index.scss
+++ b/scss/layout/_header.index.scss
@@ -27,6 +27,7 @@ nav{
     align-items: center;
     gap: 1.4rem;
     padding-right: 5rem;
+    margin-right: 5rem;
     li{
         list-style: none;
         a{
