--- a/scss/layout/_my-story.index.scss
+++ b/scss/layout/_my-story.index.scss
@@ -4,6 +4,7 @@
     height: 345px;
     .my{
         display: flex;
+        width: 45%;
         img{
             width: 180px;
             height: 270px;
@@ -13,7 +14,7 @@
         h2{
             font-size: 44px;
             font-weight: 600;
-            text-align: center;
+            width: 100%;            
             font-family: 'Poppins', sans-serif;
             color: white; 
             margin-top: 3rem;
@@ -22,14 +23,23 @@
         }
     }
     p{
-        font-size: 14px;
-        font-weight: 400;
-        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        font-style: bold;
+        font-weight: 500;
+        letter-spacing: 1px;
+        line-height: 1.9;
+        font-family:sans-serif;
         color: white;
+        margin-top:6rem;
+    }
+    .line{
+        border-top: solid white 1px;
+        width: 18%;
+        margin-bottom: 2rem;
     }
     a{
-        font-size: 13px;
-        font-family: 'Poppins', sans-serif;
+        font-size: 14px;
+        font-family:sans-serif;
         font-weight: 400;
         color: white;
         text-decoration: none;
